# process-mining-and-analysis-github

./: .env.example  .gitignore  README.md  pyproject.toml  ~$gionamenti.docx
manuale_installazione/: manuale.aux  manuale.fdb_latexmk  manuale.fls  manuale.out  manuale.tex  manuale.toc
src/analyzer/: config.py
src/analyzer/application/: archetype_analysis_usecase.py  data_preparation_usecase.py  errors.py  interfaces.py  pipeline.py  structural_comparison_usecase.py
src/analyzer/domain/: archetypes.py  constants.py  errors.py  interfaces.py  predicates.py  services.py  types.py
src/analyzer/infrastructure/: cli.py  data_provider.py  file_writer.py  logging_config.py  model_analyzer.py  pm4py_analyzer.py
src/dataset_analysis/: config.py  utils.py
src/dataset_analysis/application/: archetype_analysis_usecase.py  data_preparation_usecase.py  errors.py  interfaces.py  orchestration_helpers.py  (+2 more)
src/dataset_analysis_old/: cli.py  core.py  log_builder.py  mining.py  stratification.py  utils.py  writers.py
src/dataset_ingestor/: cli.py  core.py  index.py  manager.py  sources.py  utils.py  writers.py
src/notebooks/: visualize_results.ipynb
tests/: conftest.py
tests/analyzer/: test_application_flow.py  test_domain_services.py
tests/e2e/: test_cli.py
tests/ingestor/: test_application.py  test_domain.py  test_infrastructure.py  test_presentation.py
tests/integration/: test_pipeline_orchestration.py
tests/unit/: test_analyzer.py  test_data_provider.py  test_pm4py_analyzer.py  test_services.py  test_utils.py
tools/: __init__.py  validate_dataset.py
(+53 files in other folders)
